base.html changed

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -152,52 +152,6 @@
 	<script src='/jquery.iframe-transport.js'></script>
 	<script src='/jquery.fileupload.js'></script>
 	<script src='/jquery.cloudinary.js'></script>
-	<script>
-	var owner = {{owner|json|safe}};
-	var errorMessage = {{errorMessage|json|safe}};
-	var successMessage = {{successMessage|json|safe}};
-
-	DataApp.currentUser = {{user|json|safe}} || null;
-	if(DataApp.currentUser !== null) {
-		DataApp.currentUser.url = '/user/' + DataApp.currentUser.username;
-	}
-	$(function() {
-		new APP.AM();
-		var flash, flashMessage;
-		errorMessage.length > 0 && (flash = $('.error'), flashMessage = errorMessage[0]);
-		successMessage.length > 0 && (flash = $('.succes'), flashMessage = successMessage[0]);
-
-		if(flash) {
-			flash.find('.content-text').text(flashMessage);
-		  flash.addClass('fadeIn');
-		}
-
-		$('.am-Signin-button').click(function(event) {
-			event.preventDefault();
-			Utils.checkAuthentication();
-		});
-
-		$('.close-flash').click(function(event) {
-			$('.flash-message').css('visibility', 'hidden');
-		})
-
-
-		$('.am-header-mobile .bars').click(function () {
-			$('.body').removeClass('open-right')
-			$('.body').toggleClass('open-left')
-		})
-
-		$('.am-header-mobile .avatar').click(function () {
-			$('.body').removeClass('open-left')
-			$('.body').toggleClass('open-right')
-		})
-
-		$('.body-inner .cover').click(function () {
-			$('.body').removeClass('open-right')
-			$('.body').removeClass('open-left')
-		})
-	});
-	</script>
 
 	{% include 'elements/work.html' %}
 	{% include 'elements/user.html' %}
@@ -216,26 +170,22 @@
 
 	{% include 'elements/feed-work-created.html' %}
 
-
 	{% include 'elements/review.html' %}
 	{% include 'elements/filterItem.html' %}
-
-	<!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
-	for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
-	mixpanel.init("9b1ebdc4d8b28013c7abcbde61849b05");</script><!-- end Mixpanel -->
-
-	{% block scripts %} {% endblock %}
-
-	<script type="text/javascript">
-		$('.closed-modal').click(function () {
-			$('#lean_overlay').trigger( "click" );
-		})
-		$(document).keyup(function(e) {
-			if (e.keyCode == 27) {
-				$('#lean_overlay').trigger( "click" );
-			}
-		});
+	<script>
+	var owner = {{owner|json|safe}};
+	var errorMessage = {{errorMessage|json|safe}};
+	var successMessage = {{successMessage|json|safe}};
+	var user = {{user|json|safe}};
+	$(function() {
+		new APP.AM();
+	});
 	</script>
 
+	<script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+	for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
+	mixpanel.init("9b1ebdc4d8b28013c7abcbde61849b05");</script>
+	
+	{% block scripts %} {% endblock %}
 </body>
 </html>
