--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -36,7 +36,7 @@
 							<a href="#" class="cart"></a>
 						</ul>
 						<div class="avatar">
-							<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
+							<img src="{{user.photo}}">
 							<i class="fa fa-caret-down"></i>
 							<div class="user-menu" style="top: -8px;">
 								<a href="/user/{{user.username}}" class="user-menu-item">MI PORTAFOLIO</a>
