--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -13,12 +13,12 @@
 						<img class="logo" src="/img/logo.png">
 					</a>
 					<div class="search">
-
-						<div class="am-Search-input2">
-							<input type="text" placeholder="Busca obras y artistas" />
-							<i class="bi_interface-search search-btn"></i>
-						</div>
-
+            <form class="search-box">
+  						<div class="am-Search-input2">
+  							<input type="text" class='search-box-value' placeholder="Buscar"/>
+  							<i class="bi_interface-search search-btn"></i>
+  						</div>
+            </form>
 					</div>
 				</div>
 
