--- a/app/views/user/notifications.html
+++ b/app/views/user/notifications.html
@@ -6,31 +6,7 @@
 		<div class="inner">
 			<p class="notifications-title">TUS NOTIFICACIONES</p>
 			<div class="notifications-container">
-
 			</div>
-			<!-- <div class="notification">
-				<div></div>
-				<div class="content">
-					<header class="notification-header">
-						<a href="#">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
-						</a>
-						<div class="info">
-							<a href="#" class="name">ANNA OSTYANKO</a>
-							<p class="u-margin-top-5">compro una obra original</p>
-						</div>
-						<div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
-					</header>
-					<a href="#" class="notification-content">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/4e2097b6d3f203ff3a79d878e8ba3ab6.jpg">
-						<div class="info">
-							<p class="name uppercase">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT  SLEEP</p>
-							<p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; 252</p>
-						</div>
-					</a>
-				</div>
-			</div> -->
-			<!-- <p class="notifications-more">TODA TU ACTIVIDAD</p> -->
 		</div>
 	</div>
 
@@ -39,8 +15,9 @@
 
 {% block scripts %}
 <script>
+var data = {{data|json|safe}};
 $(function(){
-	new APP.Viewer('notificationItem', $('.notifications-container'), 'infinite' , {{data|json|safe}});
+	new APP.Viewer('notificationItem', $('.notifications-container'), 'infinite' , data);
 });
 </script>
 {% endblock %}
