--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -24,12 +24,13 @@
 					<span class="line"></span><span class="text">DATOS DE LA OBRA</span><span class="line"></span>
 				</div>
 				<p class="title">Título de la obra</p>
-				<input name='name' class="input input-modal" type="text" required placeholder="Ingrese el nombre"/>
+				<input name='name' class="input input-modal" type="text" placeholder="Ingrese el nombre"/>
 			</div>
 
 			<div class="grid-100 mobile-grid-100">
 				<p class="title">Categoría de la obra</p>
-				<select class="input select" required name='category'>
+				<select class="input select" name='category'>
+					<option disabled selected>Selecciona una Categoria</option>
 					{% for category in categories %}
 						<option value="{{category.id}}">{{category.name}}</option>
 					{% endfor %}
@@ -38,7 +39,7 @@
 
 			<div class="grid-100 mobile-grid-100">
 				<p class="title">Descripcion de la obra</p>
-				<textarea name='description' required class='input' placeholder="Descripcion" maxlength='140'></textarea>
+				<textarea name='description' class='input' placeholder="Descripcion" maxlength='140'></textarea>
 			</div>
 
 			<div class="grid-100 mobile-grid-100">
@@ -115,13 +116,13 @@
 	  			<!-- <button class="button inline upload u-margin-top-30 upload_button work-delete" data-color="red">
 	  				<i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR OBRA
 	  			</button> -->
-	        <button class="button inline upload trash" style="border: none; box-shadow: none;">
+	        <button class="button inline upload work-delete trash" style="border: none; box-shadow: none;">
 	          <i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR
 	        </button>
-					<div class="edit-options">
+					<div class="edit-options work-delete-confirm hide">
 						ELIMINAR? &nbsp;
-						<i class="bi_interface-box-tick hide save-icon" style="display: inline;"></i>
-						<i class="bi_interface-box-cross hide cancel-icon" style="display: inline;"></i>
+						<i class="bi_interface-box-tick work-delete-force save-icon" style="display: inline;"></i>
+						<i class="bi_interface-box-cross work-delete-cancel cancel-icon" style="display: inline;"></i>
 					</div>
 	  		</div>
 	  	</div>
