--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -115,3 +115,14 @@
 	font-weight bold
 	font-size 24px
 	color #333
+
+.account-title
+	font-family 'Montserrat', sans-serif
+	font-size 18px
+	font-weight bold
+	color #333
+	cursor pointer
+	max-width: 580px;
+	margin: auto;
+	i
+		margin-right 10px
