add mobile account in password

--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -29,8 +29,8 @@
 					</div>
 					<div class="am-Filter-item">
 						<ul class="am-Filter-subOptions">
-							<a href="#" class="selected">Mis datos de perfil</a>
-							<a href="#">Cambiar contraseña</a>
+							<a href="/user/{{user.username}}/account/" class="selected">Mis datos de perfil</a>
+							<a href="/user/{{user.username}}/account/password">Cambiar contraseña</a>
 							<a href="#">Administración de cuenta</a>
 						</ul>
 					</div>
