--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -1,6 +1,76 @@
 {% extends '../../partials/base.html' %}
 {% block elements %}
-	<div class="am-profile">
+	<div class="am-profile" style="padding-left: 0; padding-right: 0;">
+
+		<div class="grid-container u-margin-top-20">
+			<div class="grid-100">
+				<p class="account-title"><i class="fa fa-caret-down"></i>Cambiar Contraseña</p>
+			</div>
+		</div>
+
+		<div class="grid-container">
+			<div class="grid-100">
+				<div class="am-Filter account mobile u-margin-top-10">
+					<div class="am-Filter-item">
+						<header class="am-Filter-header">
+							<i class="bi_user-single-a"></i><p>Mi cuenta</p>
+						</header>
+					</div>
+					<div class="am-Filter-item">
+						<ul class="am-Filter-subOptions">
+							<a href="/user/{{user.username}}/account/">Mis datos de perfil</a>
+							<a href="/user/{{user.username}}/account/password" class="selected">Cambiar contraseña</a>
+							<a href="#">Administración de cuenta</a>
+						</ul>
+					</div>
+					<div class="am-Filter-item">
+						<header class="am-Filter-header">
+							<i class="fa fa-bars"></i><p>Tienda en línea</p>
+						</header>
+					</div>
+					<div class="am-Filter-item">
+						<ul class="am-Filter-subOptions">
+							<a href="#">Quiero abrir mi tienda</a>
+						</ul>
+					</div>
+				</div>
+
+				<div class="am-profile-box grid-container u-margin-top-20">
+					<form class="complete-form">
+						<div class="grid-100" style="clear: inherit;">
+							<p class="title" style="padding-top: 0;">Nueva contraseña</p>
+							<input class="input" type="password" name='password' required placeholder="Ingresa tu nueva contraseña"/>
+							<p class="title">Repite nuevamente</p>
+							<input class="input" type="password" name='re-password' required placeholder="Ingresa nuevamente tu nueva contraseña"/>
+						</div>
+
+						<div class="grid-100 mobile-grid-100">
+							<button class="button save u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
+						</div>
+
+						<div class="grid-100 save-loading hide mobile-grid-100">
+							<button class="button u-margin-top-30" data-color="green"><i class="load fa fa-spinner"></i></button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+	</div>
+{% endblock %}
+
+{% block scripts %}
+	<script>
+		$(function() {
+			$('.account-title').click(function () {
+				$('.am-Filter.account.mobile').toggleClass('visible')
+			})
+		});
+	</script>
+{% endblock %}
+
+
+	<!-- <div class="am-profile">
 
 		<div class="single-tabs" style="max-width: 580px; margin: auto;">
 		  <a href="/user/{{user.username}}/account/" class="single-tab" style="padding: 10px;">
@@ -30,8 +100,4 @@
 				</div>
 			</form>
 		</div>
-	</div>
-{% endblock %}
-
-{% block scripts %}
-{% endblock %}
+	</div> -->
