--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -168,10 +168,13 @@ white = #fff
 		width 100%
 		white-space normal
 		transition transform 700ms ease-out
-
+		background-size cover
+		background-position center center
+		// z-index 2
 		// min-height 400px
 		min-height 300px
-		display flex
+		// display flex
+		position relative
 		&-tag
 			position absolute
 			top 20px
@@ -185,8 +188,16 @@ white = #fff
 			letter-spacing 1px
 			border-radius 3px
 		&-inner
-			margin auto
+			// margin auto
+			display flex
+			align-items center
+			justify-content center
 			padding 20px
+			position absolute
+			top 0
+			bottom 0
+			left 0
+			right 0
 		.title
 			text-align center
 			// font-size 48px
