--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -2,7 +2,6 @@
 	<!-- ********************************************************************
 		$ HEADER
 	********************************************************************* -->
-
  <div class="custon-desktop-header">
 	<div class="grid-container u-padding-top-15 u-padding-bottom-15" {% if user %} style="padding-top: 10px; padding-bottom: 10px;" {% endif %}>
 		<div class="grid-100">
@@ -58,9 +57,8 @@
 			</header>
 		</div>
 	</div>
+	<div class="u-separator"></div>
  </div>
-
-<div class="u-separator"></div>
 
 <div class="costom-mobile-header">
 	<header class="am-header-mobile">
@@ -69,7 +67,8 @@
 				<i class="fa fa-bars"></i>
 			</div>
 			<a href="/">
-				<img class="logo" src="/img/logo.png">
+				<img class="logo" src="/img/logo-small.png">
+				<img class="logo desktop" src="/img/logo.png">
 			</a>
 		</div>
 
