remoremove last artist of home in mobile

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2621,6 +2621,16 @@ white = #fff
 // 				margin-left 20%
 
 
+.work-layout-discover.home
+	.grid-item:nth-child(6)
+		display none
+
+@media (min-width: 1000px)
+	.work-layout-discover.home
+		.grid-item:nth-child(6)
+			display block
+
+
 /*------------------------------------*
 	$ DISCOVER RIGHT MENU
 *------------------------------------*/
