--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -135,7 +135,7 @@
 
 	<div class="grid-container u-padding-top-15" data-state="reduce">
 		<div class="grid-100 grid-parent">
-			<div class="grid work-layout-discover">
+			<div class="grid work-layout-discover home">
 				<div class="grid-sizer"></div>
 			</div>
 			<div class="am-search-result empty-message hide">
