--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -51,7 +51,7 @@
 				<div class="avatar">
 					<img src="{{user.photo}}">
 					<div class="info">
-						<p class="name uppercase">{{user.firstname}} <br> {{user.lastname}}</p>
+						<p class="name uppercase">{{user.firstname}} {{user.lastname}}</p>
 						<p class="city u-margin-top-5">{{user.city}}, {{user.country}}</p>
 					</div>
 				</div>
