new header feed card

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3724,11 +3724,13 @@ white = #fff
 					font-size 14px
 					color #838c8c
 					font-style italic
+					display none
 				i
 					color white
 					background #4000ff
 					border-radius 50%
 					width 45.7px
+					min-width 45px
 					height 45.7px
 					display flex
 					align-items center
@@ -3835,6 +3837,11 @@ white = #fff
 		.feed-title
 			.user-info
 				flex-direction initial
+		&-card
+			&-header
+				.info
+					p
+						display block
 
 
 /*------------------------------------*
