add new home and remove change email link

--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -31,7 +31,7 @@
 						<ul class="am-Filter-subOptions">
 							<a href="/user/{{user.username}}/account/" class="selected">Mis datos de perfil</a>
 							<a href="/user/{{user.username}}/account/password">Cambiar contraseña</a>
-							<a href="#">Administración de cuenta</a>
+							<!-- <a href="#">Administración de cuenta</a> -->
 						</ul>
 					</div>
 					<div class="am-Filter-item">
