--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -20,7 +20,7 @@
 						<ul class="am-Filter-subOptions">
 							<a href="/user/{{user.username}}/account/">Mis datos de perfil</a>
 							<a href="/user/{{user.username}}/account/password" class="selected">Cambiar contraseña</a>
-							<a href="#">Administración de cuenta</a>
+							<!-- <a href="#">Administración de cuenta</a> -->
 						</ul>
 					</div>
 					<div class="am-Filter-item">
