add options in account

--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -57,16 +57,16 @@
 							<div>
 								<input type="radio" value='' name="type" id="type1"/>
 								<label for="type1">
-									<div class="interest" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/v1448431745/categories/collage.png')">
-										<div class="cover"><p>No soy artista (todavía)</p></div>
+									<div class="interest" style="background-image: url('/img/banners/formulario 1.png')">
+										<div class="cover"><p style="font-size: 16px; line-height: 1.25;">No soy artista (todavía)</p></div>
 									</div>
 								</label>
 							</div>
 							<div>
 								<input type="radio" value='' name="type" id="type2"/>
 								<label for="type2">
-									<div class="interest" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/v1448431745/categories/collage.png')">
-										<div class="cover"><p>Soy Artista Visual / Creador</p></div>
+									<div class="interest" style="background-image: url('/img/banners/formulario artista 2 sin rect.png')">
+										<div class="cover"><p style="font-size: 16px; line-height: 1.25;">Soy Artista Visual / Creador</p></div>
 									</div>
 								</label>
 							</div>
