add 3r icon to feed

--- a/app/views/partials/elements/feed-work-created.html
+++ b/app/views/partials/elements/feed-work-created.html
@@ -17,8 +17,10 @@
         <p><%=formatDate(createdAt)%></p>&nbsp;&nbsp;&nbsp;
         <% if(verb === 'create-work') { %>
           <i class="bi_interface-plus"></i>
+          <i class="bi_interface-enlarge"></i>
         <% } else { %>
           <i class="bi_ecommerce-diamon"></i>
+          <i class="bi_interface-enlarge"></i>
         <% } %>
       </div>
     </header>
